Closed
Bug 206810
Opened 23 years ago
Closed 23 years ago
No LAST-MODIFIED element in the ical of generated events or tasks
Categories
(Calendar :: Internal Components, defect, P1)
Calendar
Internal Components
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: patrickg, Assigned: mostafah)
Details
User-Agent: Mozilla/4.0 (compatible; MSIE 6.0; Windows NT 5.0; YComp 5.0.0.0)
Build Identifier: 1.3.1 (Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.3.1) Gecko/20030425)
In order to handle synchronization cleanly between the Mozilla Calendar's
events and a collaboration server, some sort of element must be present to
specify when an item was last modified. According to the ical standard, this
element is 'LAST-MODIFIED' and should be of a typical DATE-TIME format.
Property Name: LAST-MODIFIED
Purpose: The property specifies the date and time that the
information associated with the calendar component was last revised
in the calendar store
Description: The property value MUST be specified in the UTC time
format.
Without this information, synchronization is exceedingly inefficient because
all items must be sent each synch cycle.
Reproducible: Always
Steps to Reproduce:
1. Create an event and note the DTSTAMP time
2. Modify that event
Actual Results:
Note that the DTSTAMP element did not change, nor is there a LAST-MODIFIED
element.
Expected Results:
Either the DTSTAMP element should change, or a LAST-MODIFIED element should be
present with the time of the modification.
Comment 1•23 years ago
|
||
If this helps someone do synching, then let's do it as quick as possible.
Assignee: gray → mostafah
Status: UNCONFIRMED → NEW
Ever confirmed: true
Priority: -- → P1
Target Milestone: --- → 1.0
| Assignee | ||
Comment 2•23 years ago
|
||
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Updated•19 years ago
|
QA Contact: gurganbl → libical
Updated•19 years ago
|
Component: libical → Internal Components
Comment 3•19 years ago
|
||
The bugspam monkeys have been set free and are feeding on Calendar :: Internal Components. Be afraid for your sanity!
QA Contact: libical → base
Updated•18 years ago
|
Target Milestone: 1.0 → ---
You need to log in
before you can comment on or make changes to this bug.
Description
•