Fixed bug 206810: No LAST-MODIFIED element in the ical of generated events or tasks